syntax = "proto3";

option go_package = "github.com/JBurton26/msoa-go/protos/cost/";
service Cost {
  rpc GetUnitCost(CostRequest) returns (CostResponse);
  rpc TotalBasket(Basket) returns (CostResponse);
}

message Basket {
  message Item { //Repeated in order.proto
    string ID = 1;
    int32 Count = 2;
  }
  repeated Item Items = 1;
}

message CostRequest {
  string ID = 1;
}

message CostResponse {
  double Price = 1;
}
