syntax = "proto3";

option go_package = "github.com/JBurton26/msoa-go/protos/order/";

service Order {
  rpc AddToBasket(AddToCart) returns (Cart);
  rpc MakeOrder(OrderRequest) returns (OrderResponse);
}

message Item { //Repeated in cost.proto
  string ID = 1;
  int64 Count = 2;
  string Location = 3;
}

message OrderRequest {
  string ID = 1;
  string Location = 2;
  string StaffID = 3;
  Cart Trolley = 4;
  optional string Email = 5;
  double Total = 6;
}

message OrderResponse {
  string Body = 1;
}

message Cart {
  repeated Item Items = 1;
  double Price = 2;
  string Location = 3;
}

message AddToCart {
  Item ToAdd = 1;
  Cart Trolley = 2;
}
